--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,14 +7,7 @@
             </div>
         </div>
     </div>
-    <div class="col-lg-5 py-2">
-        <div class="card dashboard-card">
-            <div class="card-body">
-                <h1 class="dashboard-title text-center">Total Afiliados</h1>
-                <p class="dashboard-subtitle text-center">220</p>
-            </div>
-        </div>
-    </div>
+
     <!-- seccion dos -->
     <div class="col-lg-5 py-2">
         <div class="card dashboard-card-identity">
@@ -28,13 +21,9 @@
             </div>
         </div>
     </div>
-    <!-- termina seccion dos -->
-    <div class="col-lg-12 py-2">
-        <div class="card dashboard-card">
-            <div class="card-body">
-                <h1 class="dashboard-title"></h1>
-                <p class="dashboard-subtitle text-center"></p>
-            </div>
-        </div>
-    </div>
+</div>
+
+
+<div class="fixed-bottom">
+  <p class="lead text-center font-weight-bold">© Todos los derechos reservados - Sintransa 2020</p>
 </div>
